2005-05-28 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Removed unnecessary
	#includes.

2005-05-28 Braden McDaniel  <braden@endoframe.com>

	GTK+ compiler flags and #includes were not extraneous.

	* mozilla-plugin/src/Makefile.am
	* mozilla-plugin/src/openvrml.cpp

2005-05-28 Braden McDaniel  <braden@endoframe.com>

	Removed extraneous GTK+ compiler flags and #includes.

	* mozilla-plugin/src/Makefile.am
	* mozilla-plugin/src/openvrml.cpp

2005-05-26 Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Check for sdl-config directly rather than using
	AM_PATH_SDL.  AM_PATH_SDL is broken upstream and not fixed for
	all distributions.  This can make life difficult for users
	building from the repository.

2005-05-26 Braden McDaniel  <braden@endoframe.com>

	* tests/Makefile.am:  Pass compiler flags for pthreads when
	building the tests.

2005-05-26 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/Makefile.am:  Conditionally
	build openvrml-player.

2005-05-25 Braden McDaniel  <braden@endoframe.com>

	Removed cruft from the old event system.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2005-05-23 Braden McDaniel  <braden@endoframe.com>

	Use a named temporary for the thread function object in order to
	satisfy some older compilers (gcc 3.3).

	* mozilla-plugin/src/openvrml-player/player.cpp
	* src/libopenvrml/openvrml/browser.cpp

2005-05-23 Braden McDaniel  <braden@endoframe.com>

	Pass compiler/linker flags for pthreads when building
	libopenvrml.

	* configure.ac
	* mozilla-plugin/configure.ac
	* mozilla-plugin/src/openvrml-player/Makefile.am
	* src/libopenvrml/Makefile.am

2005-05-21 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/player.cpp (main):  Set the
	encoding on the incoming ("command") I/O stream to none (for
	binary data).

2005-05-17 Braden McDaniel  <braden@endoframe.com>
